[gd_scene load_steps=2 format=3 uid="uid://ccs5kw7b4231m"]

[ext_resource type="Script" path="res://Scripts/enemy_spawner_controller.gd" id="1_grdac"]

[node name="EnemySpawnerController" type="Node"]
script = ExtResource("1_grdac")
spawn_time = Array[float]([1.5, 1.25, 0.8, 0.5, 0.25, 0.2, 0.15, 0.15, 0.12, 0.12, 0.12])

[node name="InitialSpawn" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="SpawnEnemies" type="Timer" parent="."]
autostart = true

[node name="SpawnRound" type="Timer" parent="."]
wait_time = 60.0

[connection signal="timeout" from="InitialSpawn" to="." method="_on_initial_spawn_timeout"]
[connection signal="timeout" from="SpawnEnemies" to="." method="_on_spawn_enemies_timeout"]
[connection signal="timeout" from="SpawnRound" to="." method="_on_spawn_round_timeout"]
